2007-01-10  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #352959 – External Tools: "output pane" should be 
	                    "bottom pane"
	
	* plugins/externaltools/tools/manager.py: replace 
	'Insert in output panel' with 'Display in bottom pane'

2007-01-10  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #357529 – Open dialog doesn't retain text settings filter
	
	* gedit/gedit-prefs-manager-app.c
	(gedit_prefs_manager_get_active_file_filter),
	(gedit_prefs_manager_set_active_file_filter),
	(gedit_prefs_manager_active_file_filter_can_set):
	* gedit/gedit-prefs-manager-app.h:
	* gedit/gedit-prefs-manager.h: new functions to remember the last used
	file filter

	* gedit/gedit-file-chooser-dialog.c (filter_changed) 
	(gedit_file_chooser_dialog_new_valist): remember the last used filter
	(all_text_files_filter): improved filter for text files

2007-01-09  Paolo Borelli  <pborelli@katamail.com>

	* plugins/gedit-file-browser-plugin.c: fix build with
	gcc 2.95. Patch by Jens Granseuer.

2007-01-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c:
	* gedit/gedit-io-error-message-area.c:
	* gedit/gedit-tab.c:

	Fix some bugs in the external modification notification.
	Patch by  Emmanuel Touzery.

=== gedit 2.17.3 ===

2007-01-08  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.3 released

2007-01-08  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/Makefile.am:
	* plugins/docinfo/Makefile.am:
	* plugins/indent/Makefile.am:
	* plugins/sample/Makefile.am:
	* plugins/filebrowser/Makefile.am:
	* plugins/sort/Makefile.am:
	* plugins/time/Makefile.am:
	* plugins/taglist/Makefile.am:

	Link against GEDIT_LIBS.

2007-01-08  Paolo Borelli  <pborelli@katamail.com>

	* bindings/python/gedit.defs:
	* gedit/gedit-document.[ch]:
	* gedit/gedit-io-error-message-area.[ch]:
	* gedit/gedit-tab.[ch]:
	* gedit/gedit-window.c:

	Show a warning message when the file is modified from