@@ -1,3 +1,10 @@
+2007-01-13  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-tab.c:
+
+	Set tab icon when notifying external modification.
+	Patch by  Emmanuel Touzery.
+
 2007-01-10  Paolo Maggi  <paolo@gnome.org>
 
 	Fixes bug #352959 – External Tools: "output pane" should be 
